kube/nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
spec:
  selector:
    matchLabels:
      app: nodemyapp01
  template:
    metadata:
      labels:
        app: nodemyapp01
    spec:
      containers:
        - name:  nodeapp
          image: mak1993/nodeapp01:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
