kube/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
spec:
  selector:
    app: nodemyapp01
  ports:
    - port: 8084
      targetPort: 3000
  type: NodePort
