kube/nodeappingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeappingress
spec: 
#  ingressClassName: nginx
  rules:
  - host: "mayankwebsite.ml"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp
            port: 
              number: 8084
